# mmd-rs

./: .gitignore  Cargo.toml
fixtures/: README.md  pose.vpd
src/: lib.rs
src/pmx/: bone.rs  error.rs  material.rs  types.rs
src/pmx/reader/: helpers.rs
src/vmd/: mod.rs
src/vpd/: mod.rs
